--- a/meson.build
+++ b/meson.build
@@ -1,13 +1,13 @@
 project('scrcpy', 'c',
         version: '2.4',
-        meson_version: '>= 0.48',
+        meson_version: '>= 0.55',
         default_options: [
             'c_std=c11',
             'warning_level=2',
             'b_ndebug=if-release',
         ])
 
-add_project_arguments('-Wmissing-prototypes', language: 'c')
+# add_project_arguments('-Wmissing-prototypes', language: 'c')
 
 if get_option('compile_app')
     subdir('app')
